# eadkp_template

./: .gitignore  Cargo.toml  README.md  bootstrap.sh  build.rs  cargo-generate.toml  docker-compose.yml  dockerfile  justfile  shell.sh  start.sh
.cargo/: config.toml
src/: main.rs
src/lib/: lib.c
